--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "native-base": "^3.4.28",
+    "onesignal-expo-plugin": "^2.0.2",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-onesignal": "^5.0.5",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
